[package]
name = "device-sdk"
version = "0.1.0"
edition = "2021"
authors = ["Sylvain Oliver"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4" }
openapi = { path = "external/openapi", features = ["server"] }
axum = { version = "0.7" }
axum-extra = { version = "0.9", features = ["cookie", "multipart"] }
http = "1"
tokio = { version = "1", default-features = false, features = [
    "signal",
    "rt-multi-thread",
] }